# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.318 2014/03/15 15:29:35 jer Exp $

  15 Mar 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2013.12.20.ebuild:
  Old.

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2014.02.10.ebuild:
  Stable for ppc64, wrt bug #501090

  13 Mar 2014; Jeroen Roovers <jer@gentoo.org> youtube-dl-2013.12.20.ebuild,
  youtube-dl-2014.02.10.ebuild, -youtube-dl-2014.02.13.ebuild,
  -youtube-dl-2014.02.17.ebuild, -youtube-dl-2014.02.21.ebuild,
  -youtube-dl-2014.02.22.ebuild, -youtube-dl-2014.02.24.ebuild,
  -youtube-dl-2014.02.26.ebuild, -youtube-dl-2014.02.28.ebuild,
  -youtube-dl-2014.03.03.ebuild, -youtube-dl-2014.03.07.1.ebuild,
  youtube-dl-2014.03.10.ebuild, youtube-dl-2014.03.12.ebuild:
  Add a suffix to the internal package version when USE=-offensive.

*youtube-dl-2014.03.12 (13 Mar 2014)

  13 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.12.ebuild:
  Version bump.

*youtube-dl-2014.03.10 (10 Mar 2014)

  10 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.10.ebuild:
  Version bump.

*youtube-dl-2014.03.07.1 (07 Mar 2014)

  07 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.07.1.ebuild:
  Version bump.

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2014.02.10.ebuild:
  Stable for ppc, wrt bug #501090

*youtube-dl-2014.03.03 (03 Mar 2014)

  03 Mar 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.03.03.ebuild:
  Version bump.

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> youtube-dl-2014.02.10.ebuild:
  amd64 stable, bug #501090

*youtube-dl-2014.02.28 (28 Feb 2014)

  28 Feb 2014; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2014.02.28.ebuild:
  Version bump.

*youtube-dl-2014.02.26 (26 Feb 2014)

  26 Feb 2014; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2014.02.03.ebuild,